fixing my spacing

--- a/sass_scss/3-nested_tag.scss
+++ b/sass_scss/3-nested_tag.scss
@@ -1,10 +1,12 @@
 /* Assigning margin to all p tags inside body tags */
+$margin: 0px;
+$padding: 0px;
 
 body {
-  margin: 0;
-  padding: 0;
-}
+  margin: $margin;
+  padding: $padding;
 
-body p {
-  margin: 10px;
+  p {
+    margin: 10px;
+  }
 }
